# factorio-solver

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.claude/phases/: 001-blueprint-foundation.md  002-grid-engine.md  current.md
.claude/plans/: 2026-03-05-blueprint-crate-phase1.md  2026-03-05-grid-engine.md  2026-03-05-phase3-basic-ui.md
crates/blueprint/: Cargo.toml
crates/blueprint/src/: codec.rs  error.rs  fixtures.rs  lib.rs  main.rs  types.rs
crates/blueprint/tests/: roundtrip.rs
crates/grid/: Cargo.toml
crates/grid/data/: prototypes.json
crates/grid/src/: astar.rs  category.rs  error.rs  export.rs  grid.rs  import.rs  lib.rs  prototype.rs  render.rs  spatial.rs  types.rs
crates/grid/tests/: blueprint_import.rs
crates/solver/: Cargo.toml
crates/solver/src/: lib.rs
crates/templates/: Cargo.toml
crates/templates/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  colors.rs  lib.rs  lod.rs  main.rs  viewport.rs
docs/: factorio-solver-plan.md
phases/: 001-blueprint-foundation.md  003-basic-ui.md
